# UIPro

./: .gitignore  LICENSE  README.md  cog.yaml  pyproject.toml  requirements.txt
uipro/: constants.py  conversation.py  mm_utils.py  process_image.py  utils.py
uipro/eval/: eval_elem_gnd.py  eval_textvqa.py  model_qa.py  model_vqa.py  model_vqa_amber.py  model_vqa_chartqa.py  model_vqa_loader.py  model_vqa_mmbench.py  model_vqa_mmhal.py  model_vqa_science.py  run_llava.py
uipro/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  llava_arch.py  make_delta.py
uipro/serve/: cli.py  controller.py  gradio_web_server.py  model_worker.py  sglang_worker.py  test_message.py
uipro/train/: llava_trainer.py  train.py  train_mem.py  train_xformers.py
utils/data_utils/: 201_reduce_history.py  202_convert_actionspace.py  204_convert_scale.py  205_dedup.py  207_split_multiturn_samples.py  208_make_reasoning_data.py  210_gnd2planning.py  211_cvt_funcgnd2intentgnd.py  212_cvt_uground_format.py  21_make_vg_samples.py  31_make_refcoco.py  41_make_vwb_EG_AG_dataset.py  61_make_docowl_data.py  81_clean_autogui702k.py  910_to_qwen2p5.py  91_qwen2llamafac.py  92_llava2llamafac.py  93_llava2qwen.py  94_qwen2_add_special_tokens.py  95_qwen2florence.py  96_florence2llava.py  98_llava2florence.py  99_convert_conv_tags.py  calc_avg_tokens.py  calc_task_ratios.py  check_box_integrity.py  generate_autogui_symlinks.py  make_scaling_subsets.py  merge_training_samples.py  misc.py  push2hub.py  remove_gnd.py  selected_mobileview_apps.json  task_prompt_lib.py
(+106 files in other folders)
